# Sequential-Optimization-for-Efficient-High-Quality-Object-Proposal-Generation

./: README.md
src/: CMakeLists.txt
src/BINGpp/: BINGPP.cpp  BINGPP.h  CMakeLists.txt  CmFile.cpp  CmFile.h  CmShow.cpp  DataSetVOC.cpp  DataSetVOC.h  FilterBING.cpp  FilterBING.h  SegmentRecursive.cpp  ValStructVec.h  main.cpp  stdafx.h
src/BINGpp/FelzenSegment/: convolve.h  disjoint-set.h  filter.h  image.h  imconv.h  segment-graph.h  segment-image.h  segment.cpp
src/BINGpp/ORUtils/: Vector.h
src/LibLinear/: CMakeLists.txt
